[project]
name = "darbiadev-shipping-types"
version = "0.6.5"
description = "A set of types to provide a consistent interface across multiple packages"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
]

[project.urls]
repository = "https://github.com/darbiadev/darbiadev-shipping-types/"
documentation = "https://darbiadev.github.io/darbiadev-shipping-types/"

[project.optional-dependencies]
dev = [
    "pylint>=2.12.2",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "black>=21.12b0",
]
tests = [
    "pytest>=6.2.5",
]
docs = [
    "sphinx>=4.3.2",
    "sphinxcontrib-autoprogram>=0.1.7",
    "sphinx-rtd-theme>=1.0.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.sphinx]
copyright = "Darbia"
author = "Bradley Reynolds"
api_dir = "darbiadev_shipping_types"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = "R0902"
# justifications:
# R0902 (too-many-instance-attributes) - addresses have lots of fields
